# Copyright © 2018 Bart Massey
# [This program is licensed under the "MIT License"]
# Please see the file LICENSE in the source
# distribution of this software for license terms.

[package]
name = "sivec"
version = "0.1.1"
authors = ["Bart Massey <bart@cs.pdx.edu>"]
license-file = "LICENSE"
repository = "https://github.com/BartMassey/siarray"
description = "Self-initializing Vector"
keywords = ["vector", "initialization", "sparse"]

[dependencies]

[lib]
name = "sivec"
path = "sivec.rs"
